[AI Fix] (a11y ADA compliance): set p-author text color to #757575 for WCAG contrast

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -232,6 +232,10 @@
   color: #757575;
 }
 
+.post-meta .p-author {
+  color: #757575;
+}
+
 .post-link {
   display: block;
   @include relative-font-size(1.5);
